recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:7: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^